<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/newspaper"
            android:title="@string/nav_news_title" />
        <item
            android:id="@+id/nav_dev_tracker"
            android:icon="@drawable/ic_developer_board_black_24dp"
            android:title="@string/nav_dev_tracker_title" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/nav_profile_title" />

    </group>

    <!--<group android:id="@+id/menu_bottom"-->
        <!--android:checkableBehavior="none">-->
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_settings_black_24dp"-->
            <!--android:title="@string/action_settings"/>-->
    <!--</group>-->

</menu>
