<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.design.widget.TabLayout
                android:id="@+id/news_tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="2dp"
                android:background="@android:color/white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <android.support.design.widget.TabItem
                    android:id="@+id/topics_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_topics"/>

                <android.support.design.widget.TabItem
                    android:id="@+id/notices_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_notices"/>

                <android.support.design.widget.TabItem
                    android:id="@+id/maintenance_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_maintenance"/>

                <android.support.design.widget.TabItem
                    android:id="@+id/status_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_text_status"/>

            </android.support.design.widget.TabLayout>

            <FrameLayout
                android:id="@+id/fl_news"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_news_error_message_display"
                    android:textSize="22sp"
                    android:padding="16dp"
                    android:text="@string/results_error_message"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:visibility="invisible"/>

                <ProgressBar
                    android:id="@+id/pb_news_loading_indicator"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

                <com.github.harrynp.ffxivassistant.utils.CustomSwipeToRefresh
                    android:id="@+id/news_swipe_refresh"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <android.support.v4.view.ViewPager
                        android:id="@+id/news_viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
                </com.github.harrynp.ffxivassistant.utils.CustomSwipeToRefresh>
            </FrameLayout>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</layout>