<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/fl_character_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:id="@+id/pb_character_search_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_character_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tv_character_search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/character_search_title"
                android:textSize="20sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/primary_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/il_search_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_character_search_title"
                app:errorEnabled="true">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_search_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions"
                    android:hint="@string/hint_name"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_server_label"
                style="@style/InputLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hint_server"
                app:layout_constraintTop_toBottomOf="@id/il_search_name"
                tools:layout_editor_absoluteX="16dp" />

            <Spinner
                android:id="@+id/spinner_servers"
                style="@style/Widget.AppCompat.Spinner"
                android:layout_width="match_parent"
                android:layout_height="?attr/dropdownListPreferredItemHeight"
                android:dropDownVerticalOffset="?attr/dropdownListPreferredItemHeight"
                app:layout_constraintTop_toBottomOf="@+id/tv_server_label"/>

            <Button
                android:id="@+id/button_search"
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/search_button"
                android:textColor="@android:color/primary_text_dark"
                app:layout_constraintTop_toBottomOf="@id/spinner_servers"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_character_search_error_message_display"
                android:textSize="12sp"
                android:layout_marginTop="8dp"
                android:text="@string/results_error_message"
                android:textColor="@color/error_color"
                android:textAlignment="center"
                app:layout_constraintTop_toBottomOf="@+id/button_search"
                android:visibility="invisible"/>

        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>